Wir haben es gefunden
JUHUUU

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -187,7 +187,7 @@
         \end{wrapfigure}
         der an den Winkel grenzt, ausgeht und über Rotation um den Schnittpunkt \glqq gegen
         den Uhrzeigersinn\grqq zum anderen gelangt, bis beide übereinanderliegen (wenn man davon ausgeht, dass sich beide schneiden).
-        \begin{wrapfigure}[14]{l}{0.4\textwidth}
+        %\begin{wrapfigure}[14]{l}{0.4\textwidth}
             \definecolor{ududff}{rgb}{0.3,0.3,1}
             \definecolor{adadff}{rgb}{0.8,0.8,0}
             \begin{tikzpicture}[>=triangle 45]
@@ -205,7 +205,7 @@
                 \draw[color=black] (2.6,-1.7) node {$c$};
                 \draw[color=black] (2.6,1.7) node {$a$};
             \end{tikzpicture}
-        \end{wrapfigure}
+        %\end{wrapfigure}
         So ergibt sich $\alpha = \angle ABC = \angle ac = (\vv{BA},\vv{BC}) = \frac{\pi}{3}$. Ein Winkel $\alpha$ wird zudem immer so angegeben, dass $\alpha\in I; I = [-\pi,\pi]$ gilt.
         Dies bedeutet, dass man nur Winkel zwischen $0°$ und $180°$ erhält, und das in beide \glqq Richtungen\grqq, als im mathematisch positiven und negativen Sinn.
         Diese Einschränkung kennzeichnet man mit dem Ausdruck \glqq \textbf{modulo $2\pi$}\grqq.
