--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 \usepackage{esvect}                               %Schönere Vektoren
 \usepackage{listings}                             %Für Pseudocode/Code...
 \usepackage{color}                                %...Und dessen Einfärbung
-\usepackage{booktabs}
+%\usepackage{booktabs}
 \usepackage{enumitem}                             %Angepasstes enumerieren
 \usepackage{enumerate}                            %Zeichen der Enumerierung beliebig wählbar
 \usepackage[hidelinks=true]{hyperref}
@@ -28,14 +28,14 @@
 \usepackage{tkz-tab}                              %Für Monotonietabellen??
 \usepackage{marvosym}                             %Symbole wie Blitze und co. ...
 \usepackage{stackengine}                          %Wofür sind die nächsten 4 imports?
-\usepackage{scalerel}
-\usepackage{xcolor}
+%\usepackage{scalerel}				
+%\usepackage{xcolor}
 \usepackage{epigraph}                             %FÜrs Titelblatt
 \usepackage{array}			%Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
 
-\pgfplotsset{compat=1.15}
+%\pgfplotsset{compat=1.15}
 \usetikzlibrary{arrows}
-\usetikzlibrary{fit}
+%\usetikzlibrary{fit}
 
 
 \nonstopmode                                      %Fehler bei Kompilierung werden "leise" gestellt (sehr viel praktischer)
