--- a/kap6/kap6.tex
+++ b/kap6/kap6.tex
@@ -75,14 +75,15 @@
 						e = (0 + 0i) \in \C, z \in \C: z \oplus e &= (x + yi) \oplus (0 + 0i) \\
 															 	  &= ((x + 0) + (y + 0)i) \\
 															 	  &= (x + yi) \\
-						\Rightarrow \exists e : z \oplus e = z; z \in \C \quad \text{(Neutrales Element)}&
+						\Rightarrow \exists e: z \oplus e = z; z \in \C \quad \text{(Neutrales Element)}&
 				  \end{align*}
-			%\item \begin{align*}
-	  		%			z* = (0 + 0i) \in \C, z \in \C: z \oplus e &= (x + yi) \oplus (0 + 0i) \\
-	  		%												 	  &= ((x + 0) + (y + 0)i) \\
-	  		%													  &= (x + yi) \\
-	  		%			\Rightarrow \exists e : z \oplus e = z; z \in \C \quad \text{(Neutrales Element)}&
-	  		%		  \end{align*}
+			\item \begin{align*}
+	  					z* = -(x + yi) \in \C, z \in \C \text{(Hierbei gilt es z* nicht mit \overline{z} zu verwechseln)}: z \oplus z* &= (x + yi) \oplus (-(x + yi)) \\
+																		  														 	   &= ((x - x) + (y - y)i) \\
+	  															  													 				   &= (0 + 0i) \\
+																																	   &= e
+	  					\Rightarrow \exists z*: z \oplus z* = e; z \in \C \quad \text{(Inverses Element)}&
+	  				  \end{align*}
 			\item \begin{align*}
 						z_1 \oplus z_2 &= (x_1 + y_1i) \oplus (x_2 + y_2i) \\
 									   &= ((x_1 + x_2) + (y_1 + y_2)i) \\
