--- a/kap6/kap6.tex
+++ b/kap6/kap6.tex
@@ -81,9 +81,9 @@
 	  					z* = -(x + yi) \in \C, z \in \C \text{(Hierbei gilt es z* nicht mit \overline{z} zu verwechseln)}: z \oplus z* &= (x + yi) \oplus (-(x + yi)) \\
 																		  														 	   &= ((x - x) + (y - y)i) \\
 	  															  													 				   &= (0 + 0i) \\
-																																	   &= e
+																																	   &= e \\
 	  					\Rightarrow \exists z*: z \oplus z* = e; z \in \C \quad \text{(Inverses Element)}&
-	  				  \end{align*}
+	  			  \end{align*}
 			\item \begin{align*}
 						z_1 \oplus z_2 &= (x_1 + y_1i) \oplus (x_2 + y_2i) \\
 									   &= ((x_1 + x_2) + (y_1 + y_2)i) \\
@@ -93,6 +93,9 @@
 						\Rightarrow \forall z_1, z_2 \in \C: z_1 \oplus z_2 = z_2 \oplus z_1 \quad \text{(Kom}&\text{mutativität)}
 				  \end{align*}
 		\end{enumerate}
+		\\
+		\\
+		\underline{\textbf{Die Multiplikation}}:
 	\end{Beweis}
 
 \section{Darstellung komplexer Zahlen}
