Physik bis systèmes oscillants

--- a/kap15/kap15.tex
+++ b/kap15/kap15.tex
@@ -318,6 +318,100 @@ $$\Delta {E_{c}}_{A\rightarrow B} = \sum W_{AB}(\vv{F}_{ext})$$
 
 \end{Definition}
 
+\section{L'analyse dimensionnelle}
+
+\begin{Definition}
+
+Les différentes dimensions sont:
+\begin{itemize}
+\item Longueur $L$
+\item Masse $M$
+\item Durée $T$
+\item Température $\theta$
+\item Intensité électrique $I$
+\item Intensité lumineuse $J$
+\item Quantité de matière $N$
+\end{itemize}
+Il ne faut pas oublier les grandeurs sans dimensions, comme les angles ou les facteurs...
+\end{Definition}
+
+
+\section{Mouvements dans le champ de pesanteur uniforme}
+
+\begin{Definition}
+
+La force de frottement du fluide sur le corps peut être donnée par l'expression:
+$$f=k\cdot v^n$$
+où $k$ contient le coefficient de pénétration du corps et la nature du fluide et $n$ est réel. Ce sont des coefficients seulement déterminables par des expériences.\\\\
+Pour des petites vitesses (quelques cm/s), $n=1$, la force de frottement est donc proportionnelle à la vitesse du corps. Dans le cas d'une sphère de rayon $R$ et $\eta$ la viscosité,
+$$f=(6\pi\cdot\R\cdot\eta )\cdot v$$ 
+Pour des vitesses plus grandes (quelques m/s), $n=2$ convient mieux. Si $S$ est la section, $C_{x}$ le coefficient de trainée, $\rho_{fluide}$ la masse volumique, 
+$$ f=\frac{1}{2}C_{x}\cdot\rho_{fluide}\cdot S\cdot v^2 $$  \\\\
+Dans une chute non libre, le régime \textbf{permanent} est atteint quand $\vv{P}=-\vv{f}$, donc quand $a=\dfrac{dv}{dt}=0$.  
+\end{Definition}
+
+
+\section{Mouvements de satellites et des planètes}
+
+\begin{Definition}
+
+L'accélération d'un satellite terrestre est égal au champ de gravitation:
+$$\vv{a}=\vv{\mathcal{G}}$$
+Des formules souvent retrouvées sont :
+
+$$g_{0}\approx\mathcal{G}_{0}=\dfrac{G\cdot M_{T}}{{R_{T}}^2} \Leftrightarrow G\cdot M_{T} = g_{0}\cdot {R_{T}}^2$$
+
+$$a=a_{n}=\dfrac{G\cdot M_{T}}{r^2} = \dfrac{v^2}{r} \Leftrightarrow v=\sqrt{\dfrac{G\cdot M_{T}}{r}} = \sqrt{\dfrac{g_{0}\cdot{R_{T}}^2}{(R_{T} + h) }}$$
+
+$$V=\dfrac{d}{t}=\dfrac{2\pi r}{T} \Leftrightarrow T = \dfrac{2\pi r}{v} = \dfrac{2\pi r}{\sqrt{\dfrac{G\cdot M_{T}}{r}}} = 2\pi\cdot\sqrt{\dfrac{r^3}{G\cdot M_{T}}} = 2\pi\cdot\sqrt{\dfrac{(R_{T} + h)^3}{g_{0} \cdot {R_{T}}^2}} $$
+\end{Definition}
+
+
+\subsection{Les 3 lois de Kepler}
+
+\begin{Definition}
+\textbf{$1^{\text{ère}}$ loi:}\\
+La trajectoire d'un astre (solaire) est une éllipse dont le soleil est un des foyers\\\\
+\textbf{$2^{\text{ème}}$ loi:}\\
+Si la planète met la mème durée pour aller de $A\rightarrow B$ que de $C\rightarrow D$, alors $\Big{\mathcal{A}}_{AMB}=\Big{\mathcal{A}}_{CMD}$\\\\
+\textbf{$3^{\text{ème}}$ loi:}\\
+$$\dfrac{T^2}{a^3}=cste$$
+\end{Definition}
+
+
+
+\section{Systèmes oscillants}
+
+\begin{Definition}
+A COMPLETER APRES AVOIT FAIT LES OSCILLATEURS ÉLECTRIQUES
+
+La période propre d'un pendule simple, non amorti est : 
+$$T_{0}=2\pi\sqrt{\dfrac{l}{g}}$$
+Bien que $T_{0}$ est aussi proportionnel à l'amplitude $\theta$, ce facteur peut être négligé dans nos calculs\\
+
+La période propre d'un pendule élastique horizontal non amorti est :
+$$T_{0}=2\pi\sqrt{\dfrac{m}{k}}$$
+
+\end{Definition}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
