--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -426,10 +426,13 @@ Bildhaft sieht das folgendermaßen aus:
 \subsection{Volumenangaben mittels Integralen}
 \begin{Theorem}
   Man betrachtet einen Körper, der durch zwei parallele Ebenen mit den Gleichungen $x_3 = a$ und $x_3 = b$ begrenzt wird.
-  Für alle $a\leq z \leq b$ nennt man $P_z$ die orthogonale Fläche zu $x_3$-Achse mit der Seite $z$ und $S(z)$ die Fläche des
+  Für alle $a\leq z \leq b$ nennt man $P_z$ die orthogonale Fläche zur $x_3$-Achse mit der Seite $z$ und $S(z)$ die Fläche des
   Schnitts des Körpers durch $P_z$. Ist $S$ stetig, so ist ist das Volumen $V$ des Körpers gegeben durch:
   $$V=\int_a^b S(z)dz$$\\
 \end{Theorem}
+\begin{Bemerkung}
+  Analog zur Unterteilung einer Fläche in kleine Balken, kann man ein Volumen in kleine Scheiben unterteilen.
+\end{Bemerkung}
 \begin{Bemerkung}
   Dieses Theorem nehmen wir hin, ohne es zu beweisen, uns geht es ohnehin um die Schlussfolgerungen, die wir daraus ziehen können:
 \end{Bemerkung}
